test/zinc_source/compile_errors/callables/27_arrow_lambda_parenthesized_block_body.zn
// expected-error: arrow lambdas are expression-only
fn main() {
    f = (x) -> {
        y = x + 1
        y
    }
}
